--- a/www/index.html
+++ b/www/index.html
@@ -33,6 +33,17 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/router.js"></script>
+
+    <!-- controller js -->
+    <script src="js/controller/account-ctrl.js"></script>
+    <script src="js/controller/chatdetail-ctrl.js"></script>
+    <script src="js/controller/chats-ctrl.js"></script>
+    <script src="js/controller/dash-ctrl.js"></script>
+
+    <!-- model js -->
+    <script src="js/model/chats-model.js"></script>
+
   </head>
   <body ng-app="starter">
     <!--
